Fix asset links

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Untitled Faucet</title>
-  <link rel="stylesheet" href="/vendor/bootstrap-3.3.5/css/bootstrap.css">
-  <link rel="stylesheet" href="/css/custom.css">
+  <link rel="stylesheet" href="vendor/bootstrap-3.3.5/css/bootstrap.css">
+  <link rel="stylesheet" href="css/custom.css">
 </head>
 <body>
 
@@ -54,13 +54,13 @@
 
   </div>
 
-  <script src="/vendor/js/jquery-1.11.3.js"></script>
-  <script src="/vendor/js/jquery.timeago.js"></script>
+  <script src="vendor/js/jquery-1.11.3.js"></script>
+  <script src="vendor/js/jquery.timeago.js"></script>
   <script>
     jQuery.timeago.settings.allowFuture = true;
     jQuery.timeago.settings.allowPast = false;
   </script>
-  <script src="/vendor/js/lodash.js"></script>
+  <script src="vendor/js/lodash.js"></script>
   <script src="//www.google.com/recaptcha/api.js?render=explicit&onload=onRecaptchaLoad" async defer></script>
   <script src="app.js"></script>
 </body>
