--- a/index.html
+++ b/index.html
@@ -12,9 +12,6 @@
 
     <h1 class="branding">
       Untitled Faucet
-      <span class="powered-by">
-        Powered by <a href="https://www.moneypot.com">MoneyPot</a>
-      </span>
     </h1>
 
     <div class="row">
@@ -50,6 +47,10 @@
       <div class="col-xs-12 a visible-xs-block">
         <img src="http://placehold.it/234x60">
       </div>
+    </div>
+
+    <div class="powered-by">
+      Powered by <a href="https://www.moneypot.com">MoneyPot</a>
     </div>
 
   </div>
