--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Untitled Faucet</title>
   <link rel="stylesheet" href="vendor/bootstrap-3.3.5/css/bootstrap.css">
   <link rel="stylesheet" href="css/custom.css">
