--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Untitled Faucet</title>
+  <title>Bet Faucet</title>
   <link rel="stylesheet" href="vendor/bootstrap-3.3.5/css/bootstrap.css">
   <link rel="stylesheet" href="css/custom.css">
 </head>
@@ -12,7 +12,7 @@
   <div class="container">
 
     <h1 class="branding">
-      Untitled Faucet
+      Bet Faucet
     </h1>
 
     <div class="row">
